Fixed background issues, and modified index page

--- a/What-we-do.html
+++ b/What-we-do.html
@@ -122,7 +122,7 @@
                                     </div>
 
                                     <!--SOLUTIONS-->
-                                    <div class="center solution">
+                                    <div class="center solution" style="background-image: url(images/busy_office.jpg)">
                                         <h2 class="solution-header">Our Solutions</h2>
                                         <!--Energy & Resources-->
                                         <div class="row">
