--- a/about-us.html
+++ b/about-us.html
@@ -26,22 +26,6 @@
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png">
 
-    <!-- Owl Carousel Assets -->
-    <link href="../owl-carousel/owl.carousel.css" rel="stylesheet">
-    <link href="../owl-carousel/owl.theme.css" rel="stylesheet">
-
-
-    <style>
-        #owl-demo .item {
-            margin: 3px;
-        }
-
-        #owl-demo .item img {
-            display: block;
-            width: 100%;
-            height: auto;
-        }
-    </style>
 
 </head>
 <!--/head-->
@@ -107,7 +91,7 @@
     </header>
     <!--/header-->
 
-    <section id="about-us">
+    <section id="about_us">
         <div class="container center">
             <div>
                 <h1 class="center wow fadeInDown">Company Profile</h1>
@@ -137,102 +121,11 @@
             </div>
     </section>
 
-    <section id="partner">
-        <div class="container">
-            <div class="center wow fadeInDown">
-                <h2>Our Partners</h2>
-            </div>
 
-            <div class="partners">
-                <ul class="partners">
-                    <li>
-                        <a href="#"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms" src="images/partners/M-Files.png"></a>
-                    </li>
-                    <li>
-                        <a href="#"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms" src="images/partners/K-2.png"></a>
-                    </li>
-                    <li>
-                        <a href="#"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="900ms" src="images/partners/Newgen.png"></a>
-                    </li>
-                    <li>
-                        <a href="#"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="1200ms" src="images/partners/OpenText.png"></a>
-                    </li>
-                    <li>
-                        <a href="#"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="1500ms" src="images/partners/kbc.png"></a>
-                    </li>
-                    <li>
-                        <a href="#"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="1800ms" src="images/partners/datum.png"></a>
-                    </li>
-                    <li>
-                        <a href="#"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="2100ms" src="images/partners/l&t.png"></a>
-                    </li>
-                    <li>
-                        <a href="#"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="2400ms" src="images/partners/syntergy_logo.png"></a>
-                    </li>
-                </ul>
-
-            </div>
-        </div>
-    </section>
     <!--/#partner-->
-    <section id="clients">
-        <div class="clients-area center wow fadeInDown">
-            <h2>Our Clients</h2>
-            <div id="demo">
-                <div class="container">
-                    <div class="row">
-                        <div class="span12">
 
-                            <div id="owl-demo" class="owl-carousel">
 
-                                <div class="item">
-                                    <img src="images/clients/Sime%20Darby.png"></div>
-                                <div class="item">
-                                    <img src="images/clients/BlueScope%20Steel.png"></div>
-                                <div class="item">
-                                    <img src="images/clients/DAEWOO.png"></div>
-                                <div class="item">
-                                    <img src="images/clients/amec-logo.png"></div>
-                                <div class="item">
-                                    <img src="images/clients/alstom.png"></div>
-                                <div class="item">
-                                    <img src="images/clients/Talisman.png"></div>
-                                <div class="item">
-                                    <img src="images/clients/bc%20petrol-logo.png"></div>
-                                <div class="item">
-                                    <img src="images/clients/ROC%20oil%20logo.png"></div>
-                                <div class="item">
-                                    <img src="images/clients/Murphy_oil.png"></div>
-                                <div class="item">
-                                    <img src="images/clients/Premier_Oil_RGB_.jpg"></div>
-                                <div class="item">
-                                    <img src="images/clients/lundin.png"></div>
-                                <div class="item">
-                                    <img src="images/clients/m3energy.png"></div>
-                                <div class="item">
-                                    <img src="images/clients/petronas.png"></div>
-                                <div class="item">
-                                    <img src="images/clients/petrofac.png"></div>
-                                <div class="item">
-                                    <img src="images/clients/malaysia%20airports.png"></div>
-                                <div class="item">
-                                    <img src="images/clients/Canon-logo-2012.png"></div>
-                                <div class="item">
-                                    <img src="images/clients/klia-next-gen-hub-logo.png"></div>
-                                <div class="item">
-                                    <img src="images/clients/indahkiat.png"></div>
-                                <div class="item">
-                                    <img src="images/clients/JKR.png"></div>
 
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </section>
 
         <section id="careers">
         <div class="container center">
@@ -355,27 +248,7 @@
         <script src="js/main.js"></script>
         <script src="js/wow.min.js"></script>
 
-        <script src="../owl-carousel/owl.carousel.js"></script>
 
-        <!-- Demo -->
-
-        <script>
-            $(document).ready(function() {
-
-                var owl = $("#owl-demo");
-
-                owl.owlCarousel({
-
-                    autoPlay: 2000,
-                    items: 10, //10 items above 1000px browser width
-                    itemsDesktop: [1000, 5], //5 items between 1000px and 901px
-                    itemsDesktopSmall: [900, 3], // 3 items betweem 900px and 601px
-                    itemsTablet: [600, 2], //2 items between 600 and 0;
-                    itemsMobile: false // itemsMobile disabled - inherit from itemsTablet option
-
-                });
-            });
-        </script>
 
 </body>
 
