--- a/index.html
+++ b/index.html
@@ -23,6 +23,57 @@
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ico/apple-touch-icon-114-precomposed.png">
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png">
+
+    <style>
+body{padding-top:20px;}
+.client-carousel {
+    margin-bottom: 0;
+    padding: 0 40px 30px 40px;
+}
+/* The controlsy */
+.carousel-control {
+	left: 20px;
+    height: 40px;
+	width: 40px;
+    background: none repeat scroll 0 0 #222222;
+    border: 4px solid #FFFFFF;
+    border-radius: 23px 23px 23px 23px;
+    margin-top: 90px;
+}
+.carousel-control.right {
+	right: 20px;
+}
+/* The indicators */
+.carousel-indicators {
+	right: 50%;
+	top: auto;
+	bottom: -10px;
+	margin-right: -19px;
+}
+/* The colour of the indicators */
+.carousel-indicators li {
+	background: #cecece;
+}
+.carousel-indicators .active {
+background: #428bca;
+}
+
+    .thumbnail {
+  display: block;
+  padding: 4px;
+  line-height: 22px;
+  border: 0px ;
+  -webkit-border-radius: 0px;
+  -moz-border-radius: 0px;
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+        opacity: 0.93;
+        background: #fff;
+}
+</style>
+
 </head><!--/head-->
 
 <body class="homepage">
@@ -96,14 +147,14 @@
             </ol>
             <!--<div class="carousel-inner">-->
 
-                <div class="item active" style="background-image: url(images/slider/bg_01.jpg)">
+                <div class="item active" style="background-image: url(images/landingpage2.jpg)">
                     <div class="container">
                         <div class="row">
-                            <div class="col-sm-9">
+                            <div class="col-sm-12 center">
                                 <div class="carousel-content">
                                    <img src="images/Logos/eum_big.png" class="animation animated-item-1">
-                                    <h1 class="animation animated-item-2">Delivering business performance improvement solutions</h1>
-                                    <a class="btn-slide animation animated-item-3" href="/about-us.html#about-us">Read More</a>
+                                    <h1 class="animation animated-item-2 main-text">Delivering business performance improvement solutions</h1>
+                                    <a class="btn-slide animation animated-item-3" href="#middle">Read More</a>
                                 </div>
                             </div>
                         </div>
@@ -115,55 +166,144 @@
     <section id="middle" class="service-item">
 	   <div class="container">
             <div class="center wow fadeInDown">
-                <h2>Our Services</h2>
+                <h2>About Us</h2>
             </div>
 
             <div class="row text-center">
-
-                <div class="col-md-3">
-                             <span class="fa-stack fa-4x">
-                        <img src="images/icons/bars11.png" width="64">
-                    </span>
-                        <h4 class="service-heading wow fadeInDown">Capital Excellence</h4>
-                        <p class="text-muted box wow fadeInDown">
-                          </p>
-                    </div>   
-
-                 <div class="col-md-3">
-                             <span class="fa-stack fa-4x">
-                        <img src="images/icons/verification5.png" width="64">
-                    </span>
-                        <h4 class="service-heading wow fadeInDown">Operational Excellence</h4>
-                        <p class="text-muted box wow fadeInDown">
-                           </p>
-                    </div>
-                    
-               <div class="col-md-3">
-                             <span class="fa-stack fa-4x">
-                        <img src="images/icons/construction28.png" width="64">
-                    </span>
-                        <h4 class="service-heading wow fadeInDown">Risk & Safety Management</h4>
-                        <p class="text-muted box wow fadeInDown">
-                           </p>
-                    </div>
-
-                <div class="col-md-3">
-                             <span class="fa-stack fa-4x">
-                        <img src="images/icons/folder250.png" width="64">
-                    </span>
-                        <h4 class="service-heading wow fadeInDown">Enterprise Content Management</h4>
-                        <p class="text-muted box wow fadeInDown">
-                           </p>
-                    </div>
-
-                                                
+                <p class="lead">Energy & Utility Management has many years of experience in comprehensive document management solution and services. <br><br>We are also specialized in providing risk and content lifecycle management solutions and services. <br><br>At EUM, our business goal is to become specialist technology provider that creates sustainable business for our clients.</p>
+                            <a class="btn-home" href="about-us.html#about_us">Read Our Company Profile</a>
             </div><!--/.row-->
+
         </div><!--/.container-->
     </section><!--/#services-->
 
+    <section id="partner">
+        <div class="container">
+            <div class="center wow fadeInDown">
+                <h2>Our Partners</h2>
+            </div>
 
+            <div class="center">
+                    <div class="col-md-3  wow fadeInDown">
+                        <div class="thumbnail">
+                        <img class="img-responsive" data-wow-duration="1000ms" data-wow-delay="300ms" src="images/partners/Solutions/M-Files.png">
+                        </div>
+                    </div>
+                    <div class="col-md-3  wow fadeInDown">
+                        <div class="thumbnail">
+                        <img class="img-responsive" data-wow-duration="1000ms" data-wow-delay="600ms" src="images/partners/Solutions/K2.png">
+                        </div>
+                    </div>
+                    <div class="col-md-3  wow fadeInDown">
+                        <div class="thumbnail">
+                        <img class="img-responsive" data-wow-duration="1000ms" data-wow-delay="900ms" src="images/partners/Solutions/Newgen.png">
+                        </div>
+                    </div>
+                    <div class="col-md-3  wow fadeInDown">
+                        <div class="thumbnail">
+                        <img class="img-responsive" data-wow-duration="1000ms" data-wow-delay="1200ms" src="images/partners/Solutions/Open-text.png">
+                        </div>
+                    </div>
+                    <div class="col-md-3  wow fadeInDown">
+                        <div class="thumbnail">
+                        <img class="img-responsive" data-wow-duration="1000ms" data-wow-delay="1500ms" src="images/partners/Solutions/kbc.png">
+                        </div>
+                    </div>
+                    <div class="col-md-3 wow fadeInDown">
+                        <div class="thumbnail">
+                        <img class="img-responsive" data-wow-duration="1000ms" data-wow-delay="1800ms" src="images/partners/Solutions/datum.png">
+                        </div>
+                    </div>
+                    <div class="col-md-3 wow fadeInDown">
+                        <div class="thumbnail">
+                        <img class="img-responsive" data-wow-duration="1000ms" data-wow-delay="2100ms" src="images/partners/Solutions/L&t.png">
+                        </div>
+                    </div>
+                    <div class="col-md-3 wow fadeInDown">
+                        <div class="thumbnail">
+                        <img class="img-responsive" data-wow-duration="1000ms" data-wow-delay="2400ms" src="images/partners/Solutions/Syntergy.png">
+                        </div>
+                    </div>
 
+            </div>
+        </div>
+    </section>
 
+<section id="client" >
+
+        <div class="">
+            <div class="center wow fadeInDown">
+                <h2>Our Esteemed Clients</h2>
+            </div>
+    <div class="row">
+		<div class="col-md-12 wow fadeInDown">
+                <div id="Carousel" class="client-carousel slide">
+
+                <ol class="carousel-indicators">
+                    <li data-target="#Carousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#Carousel" data-slide-to="1"></li>
+                    <li data-target="#Carousel" data-slide-to="2"></li>
+                    <li data-target="#Carousel" data-slide-to="3"></li>
+                    <li data-target="#Carousel" data-slide-to="4"></li>
+                </ol>
+
+                <!-- Carousel items -->
+                <div class="carousel-inner">
+
+                <div class="item active">
+                	<div class="row">
+                	  <div class="col-md-3"><a href="#" class="thumbnail"><img src="images/clients/Success/Sime_darby.png" alt="Image" style="max-width:100%;"></a></div>
+                	  <div class="col-md-3"><a href="#" class="thumbnail"><img src="images/clients/Success/bluscope.png" alt="Image" style="max-width:100%;"></a></div>
+                	  <div class="col-md-3"><a href="#" class="thumbnail"><img src="images/clients/Success/DAEWOO.png" alt="Image" style="max-width:100%;"></a></div>
+                	  <div class="col-md-3"><a href="#" class="thumbnail"><img src="images/clients/Success/AMEC.png" alt="Image" style="max-width:100%;"></a></div>
+                	</div><!--.row-->
+                </div><!--.item-->
+
+                <div class="item">
+                	<div class="row">
+                		<div class="col-md-3"><a href="#" class="thumbnail"><img src="images/clients/Success/Alstom.png" alt="Image" style="max-width:100%;"></a></div>
+                		<div class="col-md-3"><a href="#" class="thumbnail"><img src="images/clients/Success/Talisman.png" alt="Image" style="max-width:100%;"></a></div>
+                		<div class="col-md-3"><a href="#" class="thumbnail"><img src="images/clients/Success/petroleum.png" alt="Image" style="max-width:100%;"></a></div>
+                		<div class="col-md-3"><a href="#" class="thumbnail"><img src="images/clients/Success/ROC.png" alt="Image" style="max-width:100%;"></a></div>
+                	</div><!--.row-->
+                </div><!--.item-->
+
+                <div class="item">
+                	<div class="row">
+                		<div class="col-md-3"><a href="#" class="thumbnail"><img src="images/clients/Success/Murphy_oil.png" alt="Image" style="max-width:100%;"></a></div>
+                		<div class="col-md-3"><a href="#" class="thumbnail"><img src="images/clients/Success/premier.png" alt="Image" style="max-width:100%;"></a></div>
+                		<div class="col-md-3"><a href="#" class="thumbnail"><img src="images/clients/Success/Lundin.png" alt="Image" style="max-width:100%;"></a></div>
+                		<div class="col-md-3"><a href="#" class="thumbnail"><img src="images/clients/Success/m3energy.png" alt="Image" style="max-width:100%;"></a></div>
+                	</div><!--.row-->
+                </div><!--.item-->
+
+                    <div class="item">
+                	<div class="row">
+                		<div class="col-md-3"><a href="#" class="thumbnail"><img src="images/clients/Success/Petronas.png" alt="Image" style="max-width:100%;"></a></div>
+                		<div class="col-md-3"><a href="#" class="thumbnail"><img src="images/clients/Success/petrofac.png" alt="Image" style="max-width:100%;"></a></div>
+                		<div class="col-md-3"><a href="#" class="thumbnail"><img src="images/clients/Success/Malaysia_Airports.png" alt="Image" style="max-width:100%;"></a></div>
+                		<div class="col-md-3"><a href="#" class="thumbnail"><img src="images/clients/Success/Canon.png" alt="Image" style="max-width:100%;"></a></div>
+                	</div><!--.row-->
+                </div><!--.item-->
+
+                    <div class="item">
+                	<div class="row">
+                		<div class="col-md-4"><a href="#" class="thumbnail"><img src="images/clients/Success/KLIA.png" alt="Image" style="max-width:100%;"></a></div>
+                		<div class="col-md-4"><a href="#" class="thumbnail"><img src="images/clients/Success/Indah_kiat.png" alt="Image" style="max-width:100%;"></a></div>
+                		<div class="col-md-4"><a href="#" class="thumbnail"><img src="images/clients/Success/JKR.png" alt="Image" style="max-width:100%;"></a></div>
+                	</div><!--.row-->
+                </div><!--.item-->
+
+                </div><!--.carousel-inner-->
+                  <a data-slide="prev" href="#Carousel" class="left carousel-control">‹</a>
+                  <a data-slide="next" href="#Carousel" class="right carousel-control">›</a>
+                </div><!--.Carousel-->
+
+		</div>
+	</div>
+            </div>
+
+    </section>
     <section id="bottom">
         <div class="container wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
             <div class="row">
@@ -257,5 +397,13 @@
     <script src="js/jquery.isotope.min.js"></script>
     <script src="js/main.js"></script>
     <script src="js/wow.min.js"></script>
+
+    <script>
+            $(document).ready(function() {
+    $('#Carousel').carousel({
+        interval: 3500
+    })
+});
+            </script>
 </body>
 </html>
