home page full makeover

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
             -moz-transition: all 0.2s ease-in-out;
             -o-transition: all 0.2s ease-in-out;
             transition: all 0.2s ease-in-out;
-            opacity: 0.93;
-            background: #fff;
+            opacity: 0.97;
+            background: #f0f0f0;
         }
     </style>
 
@@ -256,36 +256,36 @@
                 <h2>Our Services</h2>
             </div>
             <div class="container">
-            <div class="row">
-                <div class="service-index text-center center">
-                    <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
-                        <div class="service-wrap">
-                            <a href="services.html"><i class="fa fa-comments"></i></a>
-                            <h3>Professional ICT Consultancy & Support</h3>
+                <div class="row">
+                    <div class="service-index text-center center">
+                        <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
+                            <div class="service-wrap">
+                                <a href="services.html"><i class="fa fa-comments"></i></a>
+                                <h3>Professional ICT Consultancy & Support</h3>
+                            </div>
                         </div>
-                    </div>
-                    <!--/.col-md-4-->
+                        <!--/.col-md-4-->
 
-                    <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
-                        <div class="service-wrap">
-                            <a href="services.html"><i class="fa fa-sitemap"></i></a>
-                            <h3>Asset Management</h3>
+                        <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
+                            <div class="service-wrap">
+                                <a href="services.html"><i class="fa fa-sitemap"></i></a>
+                                <h3>Asset Management</h3>
 
+                            </div>
                         </div>
-                    </div>
-                    <!--/.col-md-4-->
+                        <!--/.col-md-4-->
 
-                    <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
-                        <div class="service-wrap">
-                            <a href="services.html"><i class=" fa fa-wrench"></i></a>
-                            <h3>Safety, Risk & Resilliance</h3>
+                        <div class="col-md-4 col-sm-6 wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
+                            <div class="service-wrap">
+                                <a href="services.html"><i class=" fa fa-wrench"></i></a>
+                                <h3>Safety, Risk & Resilliance</h3>
 
+                            </div>
                         </div>
-                    </div>
 
+                    </div>
                 </div>
             </div>
-                </div>
         </div>
     </section>
 
@@ -412,6 +412,34 @@
         </div>
 
     </section>
+
+    <section>
+        <div class="container">
+            <div class="center">
+                <h2>Contact Us</h2>
+            </div>
+            <div class="row center">
+                <div class="col-xs-12 col-sm-4 col-md-4">
+                    <img src="images/ico/Energy_Resources/telephone5.png" class="solution-icon">
+                    <h3>Telephone</h3>
+                    <p class="lead">(603) 7451 5696</p>
+                </div>
+
+                 <div class="col-xs-12 col-sm-4 col-md-4">
+                    <img src="images/ico/Energy_Resources/paper6.png" class="solution-icon">
+                     <h3>Fax</h3>
+                    <p class="lead">(603) 7451 5695</p>
+                </div>
+
+                 <div class="col-xs-12 col-sm-4 col-md-4">
+                    <img src="images/ico/Energy_Resources/email103.png" class="solution-icon">
+                     <h3>Email</h3>
+                    <p class="lead">info@edms-consultants.com</p>
+                </div>
+                <a class="btn-home" href="about-us.html#about_us">Contact Us Today</a>
+            </div>
+        </div>
+    </section>
     <section id="bottom">
         <div class="container wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
             <div class="row">
@@ -511,7 +539,7 @@
     <script src="js/jquery.isotope.min.js"></script>
     <script src="js/main.js"></script>
     <script src="js/wow.min.js"></script>
-
+    <script src="js/jquery.parallax.js"></script>
     <script>
         $(document).ready(function() {
             $('#Carousel').carousel({
